[UI] Modal Grid Overflow Fix
Tested on: Chrome, Firefox, IE

--- a/src/clarity-angular/modal/_modal.clarity.scss
+++ b/src/clarity-angular/modal/_modal.clarity.scss
@@ -80,6 +80,7 @@ $clr-modal-xl-width: baselineRem(48) !default;
             // it doesn't mess up the modal's proportions.
             max-height: 55vh;
             overflow-y: auto;
+            overflow-x: hidden;
 
             @extend %clr-container;
         }
